2023-09-21  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-3

        * vignettes/neighbours.Rnw: remove "fontenc"

        * DESCRIPTION (Depends): the package depends on
        R >= 3.3, because it uses \doi{} in the docs

2023-06-29  Enrico Schumann  <es@enricoschumann.net>

        * R/next_subset.R (next_subset): add function

2022-08-22  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-2
        (Suggests): add 'quadprog', used in vignette

2022-08-19  Enrico Schumann  <es@enricoschumann.net>

        * inst/tinytest/test_neighbours.R: use more
        tolerance

2022-08-17  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-1

        * vignettes/neighbours.Rnw: reset 'par' and
        'options', as requested by CRAN

2022-08-16  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-0

2022-08-10  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): fix "permute"
        neighbourhoods with stepsize > 2

2022-07-29  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): rewrite code
        for numeric neighbourhood functions

2021-09-01  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): add type
        "permute"

2020-06-05  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (compare_vectors): simplify
        computation
        (neighbourfun): fix case of numeric neighbourhood
        with updating and 'active' vector

2020-05-12  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (compare_vectors): new
        argument 'diff.char'

2020-03-28  Enrico Schumann  <es@enricoschumann.net>

        * vignettes/neighbours.Rnw: add vignette

2019-12-12  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun,random_vector):
        rename argument 'n' => 'length'